--- a/3D_model_Sentinel_2_FCC_JOSHIMATH.ipynb
+++ b/3D_model_Sentinel_2_FCC_JOSHIMATH.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN0sPm13rVZ/zXADGXShTDb",
+      "authorship_tag": "ABX9TyPHW0q3AXaPjoc3m5SgjZt6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -631,7 +631,7 @@
     {
       "cell_type": "code",
       "source": [
-        "os.environ[\"MAPTILER_KEY\"] = \"Cr9tWKKuQOpNGa2CzDFb\""
+        "os.environ[\"MAPTILER_KEY\"] = \"#YOUR_MAPTILER_API_KEY\""
       ],
       "metadata": {
         "colab": {
